missing class added

--- a/index.html
+++ b/index.html
@@ -6,6 +6,110 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <header class="header-container">
+    <div class="header-title">Metrolics</div>
+    <nav class="menu-container">Menu</nav>
+  </header>
+
+
+  <div class="banner-container">
+    <div class="banner"></div>
+  </div>
+
+
+  <div class="heading-one-container">
+    <div>
+      <h1>Hey guys! This is the Metrolics theme. It sports a responsive layout with a mobile layout.</h1>
+    </div>
+  </div>
+
+
+  <div class="description-container">
+    <div class="description-heading">
+      <h3>Things that we do</h3>
+      <p></p>
+    </div>
+    <div class="web-solutions">
+      <h5>Web solutions</h5>
+      <p></p>
+    </div>
+   <div class="photography">
+      <h5>photography</h5>
+      <p></p>
+    </div>
+    <div class="web-development">
+      <h5>Web development</h5>
+      <p></p>
+    </div>
+    <div class="web-design">
+      <h5>Web design</h5>
+      <p></p>
+    </div>
+  </div>
+
+
+  <div class="lately-contianer">
+    <h3>What's Up Lately?</h3>
+    <p></p>
+    <div>
+     <div class="lately-image-one"></div>
+    </div>
+    <div>
+     <div class="lately-image-two"></div>
+    </div>
+    <div>
+     <div class="lately-image-three"></div>
+    </div>
+  </div>
+
+
+  <div class="latest-projects">
+    <h3>Our Latest Projects</h3>
+    <p></p>
+    <div>
+     <div class="latest-projects-image-one"></div>
+    </div>
+    <div>
+      <div class="latest-projects-image-two"></div>
+     </div>
+     <div>
+      <div class="latest-projects-image-three"></div>
+     </div>
+     <div>
+      <div class="latest-projects-image-four"></div>
+     </div>
+     <div>
+      <div class="latest-projects-image-five"></div>
+     </div>
+     <div>
+      <div class="latest-projects-image-six"></div>
+     </div>
+
+
+     <div class="above-container">
+      <h3>Thingsofabove</h3>
+      <p></p>
+      <div class="above-image-one"></div>
+      <div class="above-image-twos"></div>
+     </div>
+
+
+     <div class="companies-container">
+      <div class="company-logo-one"></div>
+      <div class="company-logo-two"></div>
+      <div class="company-logo-three"></div>
+      <div class="company-logo-four"></div>
+      <div class="company-logo-five"></div>
+     </div>
+
+
+     <footer class="footer-container">
+      <div class="summary"></div>
+      <div class="about"></div>
+      <div class="fickr"></div>
+      <div class="tweets"></div>
+      <div class="news"></div>
+     </footer>
+
 </body>
 </html>
